--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .content {
+     background-image: url('https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg');
+      background-image: cover;
+      background-color: rgba(255,255,255,0.6);
+      background-blend-mode: lighten;
+      }
+    </style>
 </head>
 <body>
 
@@ -13,20 +21,28 @@
      List of products
 </p>
 
+<div id="content"></div>
+
 <div th:if="${ not#lists.isEmpty(productList)}">
     <table class="table table-striped w-50">
         <tr>
             <th>Id</th>
             <th>Product Name</th>
             <th>Price</th>
+            <th>Update</th>
+            <th>Delete</th>
         </tr>
         <tr th:each="product : ${productList}">
             <td th:text="${product.id}"></td>
             <td th:text="${product.name}"></td>
             <td th:text="${product.price}"></td>
+            <td> <a href="products.html" th:href="@{/mvc/update(id=${product.id})}">Update</a></td>
+            <td> <a href="products.html" th:href="@{/mvc/delete(id=${product.id})}">Delete</a></td>
         </tr>
         <table>
 </div>
 
 </body>
+
+
 </html>
