--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -14,10 +14,14 @@
 </p>
 
 <form action="#" th:action="@{/mvc/updateProduct}" th:object="${productUpdateDto}" method="post">
-    <p>Id: <input type="text" th:value="${param.id}" th:field="*{id}" />   </p>
-    <p>Name: <input type="text" th:field="*{name}" /></p>
-    <p>Price: <input type="text" th:field="*{price}" /></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    <form action="#" th:action="@{/mvc/updateProduct}" th:object="${productUpdateDto}" method="post">
+        <p>Id: <span th:text="${param.id}"></span></p>
+        <input type="hidden" th:field="*{id}" th:value="${param.id}" />
+        <p>Name: <input type="text" th:field="*{name}" /></p>
+        <p>Price: <input type="text" th:field="*{price}" /></p>
+        <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    </form>
+
 </form>
 
 <button onclick="history.back()">Go Back</button>
