--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Products page</title>
+    <title>Create Product</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
-<p>
-    Update product
-</p>
+<h2>Create Product</h2>
 
-<form action="#" th:action="@{/mvc/updateProduct}" th:object="${productUpdateDto}" method="post">
-    <p>Id: <input type="text" th:field="*{id}" readonly/></p>
+<form action="#" th:action="@{/mvc/createProduct}" th:object="${productCreateDto}" method="post">
     <p>Name: <input type="text" th:field="*{name}"/></p>
     <p>Price: <input type="text" th:field="*{price}"/></p>
-    <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
+    <p><input type="submit" value="Submit" class="btn btn-primary"/> <input type="reset" value="Reset"
+                                                                            class="btn btn-secondary"/></p>
 </form>
 
-<button onclick="history.back()">Go Back</button>
-<br/>
-<a href="/mvc">
-    <button>Home</button>
-</a>
 </body>
-
-
 </html>
